[gd_scene load_steps=6 format=3 uid="uid://5exjr1872hc6"]

[ext_resource type="Script" path="res://Script/Scence.gd" id="1_v57xj"]
[ext_resource type="PackedScene" uid="uid://8x3ihm3wxr0u" path="res://Component/Token.tscn" id="2_kttej"]
[ext_resource type="PackedScene" uid="uid://duyhrvhdq1kt1" path="res://Component/SupportToken.tscn" id="3_ukh8t"]
[ext_resource type="Texture2D" uid="uid://xxdmqlq3rjhd" path="res://Asset/play_table.png" id="3_yh4je"]
[ext_resource type="FontFile" uid="uid://vcb0sufur7w" path="res://MilkyNice.ttf" id="5_3un37"]

[node name="Scence" type="Node2D"]
script = ExtResource("1_v57xj")
token_scence = ExtResource("2_kttej")
support_token_scence = ExtResource("3_ukh8t")

[node name="RoleSelectZone" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="TextureRect" type="TextureRect" parent="RoleSelectZone"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -273.0
offset_top = 501.0
offset_right = 738.0
offset_bottom = 1094.0
grow_horizontal = 2
grow_vertical = 2
rotation = -1.5708
texture = ExtResource("3_yh4je")

[node name="BtnResetAll" type="Button" parent="RoleSelectZone"]
layout_mode = 0
offset_left = 7.0
offset_top = 8.0
offset_right = 82.0
offset_bottom = 39.0
theme_override_fonts/font = ExtResource("5_3un37")
text = "Reset All"

[node name="BtnAddDeadToken" type="Button" parent="RoleSelectZone"]
layout_mode = 0
offset_left = 1384.0
offset_top = 992.0
offset_right = 1519.0
offset_bottom = 1023.0
theme_override_fonts/font = ExtResource("5_3un37")
text = "Add Dead Token"

[node name="RolesZone" type="Node2D" parent="."]

[connection signal="pressed" from="RoleSelectZone/BtnResetAll" to="." method="_on_btn_reset_all_pressed"]
[connection signal="pressed" from="RoleSelectZone/BtnAddDeadToken" to="." method="_on_btn_add_dead_token_pressed"]
